# Loom

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml  skein.json
.github/: release.yml
desktop-backend/: Cargo.toml
docs/: engineering-standards.md  provider-integration-map.md  release-runbook.md
electron/: after-pack.test.ts  backend-client.test.ts  backend-client.ts  browser-controller.ts  claude-agent-events.test.ts  claude-agent-events.ts  claude-agent-permissions.test.ts  claude-agent-permissions.ts  claude-agent-usage.test.ts  claude-agent-worker.ts  main.ts  menu.ts  preferences.ts  preload.ts  preview-protocol.test.ts  preview-protocol.ts  updater.test.ts  updater.ts
scripts/: build-electron.mjs  (+5 more)
src/: App.css  (+3 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: app_identity.rs  lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/commands/: conversation.rs  git_review.rs  mod.rs  system.rs  voice.rs  workspace.rs
src-tauri/src/domain/: conversation.rs  mod.rs  settings.rs  shortcuts.rs  voice.rs  workspace.rs
src-tauri/src/infrastructure/: database.rs  images.rs
src-tauri/src/runtime/: codex_paths.rs  protocol.rs  protocol_tests.rs  session.rs  session_tests.rs  supervisor.rs
src-tauri/src/services/: browser_proxy.rs  git.rs  mod.rs  open.rs  prompt_naming.rs  pull_requests.rs  terminal.rs  thread_titles.rs  voice.rs  workspace.rs  worktree_scripts.rs
src-tauri/src/services/git/: actions.rs  diff.rs  status.rs
src-tauri/src/services/pull_requests/: github.rs
src-tauri/src/services/pull_requests/github/: tests.rs
(+260 files in other folders)
